--- a/BasicProject/HelloFlask/templates/about.html
+++ b/BasicProject/HelloFlask/templates/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>{{ title }}</title>
-    <link rel="stylesheet" type="text/css" href="/static/site.css" />
+    <link rel="stylesheet" type="text/css" href="/static/fonts/site.css" />
 </head>
 <body>
     {% extends "layout.html" %}
